compiler/testData/diagnostics/tests/sealed/RedundantAbstract.kt
<!ABSTRACT_MODIFIER_IN_SEALED!>abstract<!> sealed class Base {

}